404 page fix, text align center

--- a/components/HomePage/ThemeCards/ThemeCards.module.scss
+++ b/components/HomePage/ThemeCards/ThemeCards.module.scss
@@ -105,6 +105,7 @@
                     line-height: 2.8rem;
                     width: 75%;
                     margin: 0 auto;
+                    text-align: center;
                 }
                 p {
                     width: 95%;
